Switched from URL to URI class for TagExtractor for better performance